# django_dx

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: docker.yml  linter.yml  tests.yml
django_dx/: asgi.py  celery.py  settings.py  tests.py  urls.py  wsgi.py
